--- a/nginx-persistent.json
+++ b/nginx-persistent.json
@@ -305,8 +305,8 @@
             "name": "GENERIC_WEBHOOK_SECRET"
         },
         {
-            "description": "The name of the OpenShift Service exposed for the database.",
-            "displayName": "Database Service Name",
+            "description": "The name of Persistent Volume Claim used for data/.",
+            "displayName": "Persistent Volume Claim Name",
             "name": "NGINX_PVC_NAME",
             "required": true,
             "value": "nginx-data"
