--- a/nginx-persistent.json
+++ b/nginx-persistent.json
@@ -60,6 +60,26 @@
         },
         {
             "apiVersion": "v1",
+            "kind": "Route",
+            "metadata": {
+                "annotations": {
+                    "template.openshift.io/expose-uri": "http://{.spec.host}{.spec.path}"
+                },
+                "name": "${NAME}"
+            },
+            "spec": {
+                "host": "${APPLICATION_DOMAIN}",
+                "to": {
+                    "kind": "Service",
+                    "name": "${NAME}"
+                },
+                "tls": {
+                    "termination": "edge"
+                }
+            }
+        },
+        {
+            "apiVersion": "v1",
             "kind": "ImageStream",
             "metadata": {
                 "annotations": {
