--- a/nginx-persistent.json
+++ b/nginx-persistent.json
@@ -63,9 +63,9 @@
             "kind": "Route",
             "metadata": {
                 "annotations": {
-                    "template.openshift.io/expose-uri": "http://{.spec.host}{.spec.path}"
+                    "template.openshift.io/expose-uri": "https://{.spec.host}{.spec.path}"
                 },
-                "name": "${NAME}"
+                "name": "s-${NAME}"
             },
             "spec": {
                 "host": "${APPLICATION_DOMAIN}",
